# enclaver-sealing

./: Cargo.toml  Dockerfile  README.md  enclaver.yaml  flake.nix
.github/workflows/: ci.yaml
docs/: architecture.md
src/: api.rs  lib.rs  main.rs  nums.rs  settings.rs
src/api/: encryption_middleware.rs  generate_secret.rs  health.rs  mod.rs  public_key.rs  retrieve_public_key.rs  settings.rs  setup.rs  verify_and_sign.rs
tests/: secure_verify_and_sign.rs  verify_and_sign.rs
tests/common/: mod.rs
