[package]
name = "confidential-script"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1" }
aws-sdk-kms = { version = "1.15" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1.1.0"
p256 = { version = "0.13", features = ["pkcs8"] }
sha2 = "0.10"
hex = "0.4.3"
confidential-script-lib = "0.2.2"
bitcoinkernel = "0.0.22"
bitcoin = "0.32.7"
rand = "0.9.2"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22.1"
